# TRP

./: .gitignore  README.md
TRP/: .env.example  llm_client.py  llm_example.py  mint_approval_token.py  pyproject.toml  pytest.ini  requirements.txt  trp_policy.md
TRP/app/: app.py
TRP/scripts/: bench_http.py  failover_async_bench.py
TRP/sdk/: approval_tokens.py  basic_adapter_executor.py  basic_policy.py  frame_validation.py  in_memory_impl.py  observability.py  redis_impl.py  router_interfaces.py  router_service.py  trp_client.py  trp_transport_http.py  trp_types.py
TRP/tests/: compare_qwen_tool_use.py  compare_tau2_benchmark.py  tau2_agents.py  test_trp_regression.py
